exo: Generate keyboard/pointer leave events when focus is destroyed.

We need to generate leave events if the current focus surface is
destroyed. This is a small refactor of pointer/keyboard code to
generate these events without having to duplicate code.

Bug: 788574
Test: exo_unittests --gtest_filter=*.On*Leave
Change-Id: Ied64b149a38b67392b68f351814610c30c197e4f